# launchpadx

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OFFICIAL_BUILDS.md  README.md  SECURITY.md  _test.py  build-check.ps1  build.cmd  build.rs  build.sh  config.example.json  diagnose.ps1  diagnose.sh  fix.js  gen.py  launch-codex.ps1  launch-launchpadx.cmd  launch-launchpadx.ps1  run-gui.cmd  test.cmd  write_backend.js  write_backend2.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: build-official-binaries.yml  ci.yml  release.yml
docs/: architecture.md  release-process.md  windows-signing.md
scripts/: build-check.sh  build.ps1  build.sh  lib.ps1  refresh-models.ps1  restore.ps1  run-cli.ps1  run-gui.ps1  test.ps1
src/: acp_client.rs  app_logic.rs  branding.rs  build_check.rs  codex_app_server.rs  codex_config.rs  codex_monitor.rs  codex_process.rs  codex_thread_store.rs  config.rs  connection_watch.rs  diagnose.rs  discovery_log.rs  failover.rs  ipc.rs  lib.rs  lpad_app_server.rs  lpad_config.rs  lpad_monitor.rs  lpad_process.rs  lpad_thread_store.rs  main.rs  ollama.rs  process_util.rs  rate_limit_watch.rs  session_checkpoint.rs  session_monitor.rs  web_backend.rs
src/launcher/: autostart.rs  linux.rs  macos.rs  mod.rs  windows.rs
web/: check-build.ps1  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: codex-profile.spec.ts  launcher.spec.ts  provider-edge-cases.spec.ts  readme-screenshot.spec.ts  status-feedback.spec.ts
web/e2e/fixtures/: codex-config.toml  readme-config.json
web/src/: App.tsx  global.d.ts  index.css  main.tsx  styles.css  types.ts
web/src/components/: AppShell.tsx  ConfigForm.tsx  EndpointCard.tsx  LaunchPanel.tsx  Layout.tsx  ModelCard.tsx  Sidebar.tsx  StatusLine.tsx  StatusPill.tsx
(+39 files in other folders)
