[package]
name = "launchpadx"
version = "0.2.6"
repository = "https://github.com/CarapaceUDE/launchpadx"
edition = "2021"
description = "Desktop launcher to point Codex at any OpenAI-compatible API."
license = "MIT"

[dependencies]
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
toml_edit = "0.22"
wry = { version = "0.46", features = ["protocol"] }
tao = "0.29"
tiny_http = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
chrono = { version = "0.4", features = ["serde"] }

[features]
# Default on so local `cargo build` matches release GUI packaging: Windows
# builds use `windows_subsystem = "windows"` and do not open a console window.
# Build the console CLI binary with `--no-default-features` (release workflow
# stages that as `launchpadx-cli.exe`).
default = ["desktop"]
desktop = []
